Fix document template being overwritten

--- a/Reports/Document template.tex
+++ b/Reports/Document template.tex
@@ -12,25 +12,11 @@
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{5pt plus 2pt minus 1pt}
 
-\title{Plan van Aanpak}
-\author{Collaborative augmented reality game}
+\title{TITLE}
+\author{AUTHORS}
 \date{}
 
 \begin{document}
 \maketitle
-
-\section{Game concept}
-
-uitleg van spiegel game idee, precieze rollen van remote en local spelers, basis concept en hoe het later uitgebreid kan worden
-
-\section{Aanpak}
-
-technische details, zoals gebruik van ar toolkit en oculus rift + camera's
-
-ook belangrijk zijn de afspraken, bijv. 1x per week een meeting/email met de coach
-
-\section{Planning}
-
-overzicht van taken en doelen van elke sprint, bijv. basis AR demo met kaarten en 3D spiegels na eerste 2 weken. we moeten tijdens het ontwikkelen terug kunnen verwijzen hierna om te laten zien dat we op schema zitten
 
 \end{document}
