Extracted Game Concept section from main document.

--- a/Reports/Plan van Aanpak/Plan van Aanpak.tex
+++ b/Reports/Plan van Aanpak/Plan van Aanpak.tex
@@ -19,9 +19,7 @@
 \begin{document}
 \maketitle
 
-\section{Game concept}
-
-uitleg van spiegel game idee, precieze rollen van remote en local spelers, basis concept en hoe het later uitgebreid kan worden
+\input{GameConcept.tex}
 
 \section{Aanpak}
 
