Add basic planning section

--- a/Reports/Plan van Aanpak/Plan van Aanpak.tex
+++ b/Reports/Plan van Aanpak/Plan van Aanpak.tex
@@ -12,7 +12,7 @@
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{5pt plus 2pt minus 1pt}
 
-\title{Plan van Aanpak}
+\title{Product planning}
 \author{Thijs Boumans\\ Patrick Kramer\\ Alexander Overvoorde\\ Tim van Rossum}
 \date{}
 
@@ -21,14 +21,28 @@
 
 \input{GameConcept.tex}
 
-\section{Aanpak}
+\section{Approach}
 
 technische details, zoals gebruik van ar toolkit en oculus rift + camera's
+
+test coverage, scrum, testen met gebruikers
 
 ook belangrijk zijn de afspraken, bijv. 1x per week een meeting/email met de coach
 
 \section{Planning}
 
-overzicht van taken en doelen van elke sprint, bijv. basis AR demo met kaarten en 3D spiegels na eerste 2 weken. we moeten tijdens het ontwikkelen terug kunnen verwijzen hierna om te laten zien dat we op schema zitten
+The first two weeks represent the research phase. In this phase we will find a suitable augmented reality (AR) library for Unity and prepare an Oculus Rift for AR use with cameras. We'll also design an architecture for the game that covers the marker detection, networking and gameplay mechanics. All of this information will be described in the research report handed in on May 1st.
+
+Main development commences after this phase and is organized in two week sprints. The table below describes the goals per sprint, which will serve as a helpful reference to stay on schedule during development.
+
+\begin{tabular}{|l|c|r|}
+	\hline
+	Weeks & Deadline & Goal \\ \hline
+	4.1 + 4.2 & May 1st & Research report described above \\ \hline
+	4.3 + 4.4 & May 15th & ??? \\ \hline
+	4.5 + 4.6 & May 29th & ??? \\ \hline
+	4.7 + 4.8 & June 12th & ??? \\ \hline
+	4.9 + 4.10 & June 26th & ??? \\ \hline
+\end{tabular}
 
 \end{document}
