--- a/Reports/Plan van Aanpak/GameConcept.tex
+++ b/Reports/Plan van Aanpak/GameConcept.tex
@@ -1,19 +1,23 @@
 \section{Game concept}
 
-uitleg van spiegel game idee, precieze rollen van remote en local spelers, basis concept en hoe het later uitgebreid kan worden
+The goal of the game is to solve a puzzle by moving and rotating laser beams and 
+mirrors in such a way that a predefined target is hit. The game can be played by 
+one or more local players and one or more remote players.
 
-name: Mirror puzzle (cooperative puzzle game)
-short description: 
-Players need to solve puzzles involving laser beams. The goal is to hit a predefined target with the laser beam, using mirrors to direct the laser beams. Laser beams can be blocked or manipulated by objects that exist purely in virtual space, which are made visible to the local players using AR technology. The local players can move blocks/cards (representing mirror bases) to manipulate the location of the mirrors, while the remote players can rotate these mirrors.
-To complete the goal, the local and remote players have to work together to get the mirrors in the right locations and with the right orientation so that the laser beams hit the target(s). Various puzzles can be presented with increasing complexity.
+There are cards present for the local players that represent mirror bases. These 
+must be placed on the table, which will be the locations for the mirrors. The local
+players will be able to see the mirrors they place through the use of AR technology.
+Each of the local players will only be given a few of the mirror bases needed to solve
+the puzzle, and as such solving the puzzle requires cooperation from all local players.
 
-remote goal: Rotate mirrors to have the laser beams hit the goal.
-remote perspective: birds-eye view
-remote gameplay abilities: Rotate mirrors
+The remote players can also see the placed mirrors, and can rotate them to influence 
+the path of the laser beam(s). The remote players is also the only one who can see the
+obstacles that are predefined for that particular puzzle. Only by cooperation between 
+local players (who can only move the mirror bases) and remote players (who can only 
+rotate them) it becomes possible to hit the target and as such solve the puzzle.
 
-local goal: Place mirrors
-local gameplay abilities: Placing mirrors to have the laser beams hit the goal
-local perspective: birds-eye view
-
-preventing "puppetmaster": Local players can only place mirrors. Remote players can only rotate them. The puzzles require the location as well as the orientation of the mirrors to be correct. As such, continued communication is required between local and remote players.
-technical challenges: Rendering lasers for local in the right position. 
+The game provides various different types of mirrors with different properties, 
+allowing for more complex puzzles. One example of such a mirror is a colored mirror, 
+and then require the target is hit with the right (combination of) colors. Another 
+way to make puzzles more  complex is requiring that the players combine beams together
+to create more powerful beams.
