--- a/Reports/Plan van Aanpak/Planning.tex
+++ b/Reports/Plan van Aanpak/Planning.tex
@@ -1,15 +1,21 @@
 \section{Planning}
 
-The first two weeks represent the research phase. In this phase we will find a suitable augmented reality (AR) library for Unity and prepare an Oculus Rift for AR use with cameras. We'll also design an architecture for the game that covers the marker detection, networking and gameplay mechanics. All of this information will be described in the research report handed in on May 1st.
+The first two weeks represent the research phase. In this phase we will find a suitable augmented reality (AR) library for Unity and prepare an Oculus Rift for AR use with cameras. We'll also design an architecture for the game that covers the marker detection, networking and gameplay mechanics. All of this information will be described in the research report handed in on May 1st. Main development commences after this phase and is organized in weekly sprints. The table below describes the goals per sprint, which will serve as a helpful reference to stay on schedule during development.
 
-Main development commences after this phase and is organized in two week sprints. The table below describes the goals per sprint, which will serve as a helpful reference to stay on schedule during development.
+The first SIG submission is due May the 26th. By then, we should already have a semi-functional product. The basic functionality (AR functionality, basic gameplay mechanics, etc.) should be in this version of our product. All the according graphics should also be done.
+
+The second SIG submission is due June the 6th. By then, most of the functionality should be implemented (this includes advanced gameplay mechanics, hitting multiple targets, mirror elevations, etc). Also, all the bad parts of the code structure/architecture from the first version should be removed.
+
+The project should be done by June the 26th, the Friday of week 4.10. This includes not only the project but also a final report of 40 to 50 pages. This means that the report should be worked on continuously.
 
 \begin{tabular}{|l|c|r|}
 	\hline
 	Weeks & Deadline & Goal \\ \hline
 	4.1 + 4.2 & May 1st & Research report described above \\ \hline
-	4.3 + 4.4 & May 15th & ??? \\ \hline
-	4.5 + 4.6 & May 29th & ??? \\ \hline
+	4.3 & May 8th & AR integration + lasers \\ \hline
+	4.4 & May 15th & Basic gameplay start + start report \\ \hline
+	4.5 & May 22nd & Finalize first SIG version \\ \hline
+	4.6 & May 29th & Start advanced gameplay \\ \hline
 	4.7 + 4.8 & June 12th & ??? \\ \hline
 	4.9 + 4.10 & June 26th & ??? \\ \hline
 \end{tabular}
