PvA grotendeels klaar.

--- a/Reports/Plan van Aanpak/Planning.tex
+++ b/Reports/Plan van Aanpak/Planning.tex
@@ -19,3 +19,13 @@ The project should be done by June the 26th, the Friday of week 4.10. This inclu
 	4.7 + 4.8 & June 12th & ??? \\ \hline
 	4.9 + 4.10 & June 26th & ??? \\ \hline
 \end{tabular}
+
+\section{Holidays + businessdays on which EWI is closed}
+\begin{itemize}
+	\item Koningsdag 27-04-2015
+	\item Dodenherdenking 04-05-2015
+	\item Bevrijdingsdag 05-05-2015
+	\item Hemelvaartsdag 14-05-2015
+	\item De dag na Hemelvaartsdag 15-05-2015
+	\item 2e Pinksterdag 25-05-2015
+\end{itemize}
