Expand approach section a bit

--- a/Reports/Plan van Aanpak/Plan van Aanpak.tex
+++ b/Reports/Plan van Aanpak/Plan van Aanpak.tex
@@ -8,6 +8,7 @@
 \usepackage{amssymb}
 \usepackage[section] {placeins}
 \usepackage[verbose, a4paper, margin=0.5in] {geometry}
+\usepackage{color}
 
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{5pt plus 2pt minus 1pt}
@@ -21,13 +22,7 @@
 
 \input{GameConcept.tex}
 
-\section{Approach}
-
-technische details, zoals gebruik van ar toolkit en oculus rift + camera's
-
-test coverage, scrum, testen met gebruikers
-
-ook belangrijk zijn de afspraken, bijv. 1x per week een meeting/email met de coach
+\input{Approach.tex}
 
 \input{Planning.tex}
 
