--- a/Reports/Plan van Aanpak/Approach.tex
+++ b/Reports/Plan van Aanpak/Approach.tex
@@ -6,11 +6,30 @@ client meetings.
 
 \subsection{Technical details}
 
-technische details, zoals gebruik van ar toolkit en oculus rift + camera's
+Although AR glasses have been provided to us, their field-of-view is very
+limited and is not suitable for most of our concepts. We experienced ourselves
+that the limited fov causes a lot of problems. Instead, we're going to try to
+use an Oculus Rift and cameras to create our own high fov augmented reality
+glasses.
+
+The Unity game engine is going to be used to render the in-game objects like
+mirrors and laser beams over the camera image.
+
+{\color{red} TODO: Find suitable AR library and write about it here}
 
 \subsection{Software engineering}
 
-test coverage, scrum, UML, testen met gebruikers
+Using the Unity game engine means that we'll use a loosely coupled
+component-based architecture from the start. Unity has built-in unit and
+integration testing systems, which we'll make extensive use of in development.
+We'll also maintain UML diagrams of the architecture to keep an overview of how
+everything works, and to plan integration of new features.
+
+We'll make use of the Scrum software development methodology to plan new
+features and to help stick to the schedule. As is expected, there will be a
+playable demo at the end of each weekly sprint. As soon as the game has all the
+basic ingredients to be fun to play, we'll find users to play test on a regular
+basis and collect feedback from them to improve the gameplay.
 
 \subsection{Guidelines}
 
@@ -19,6 +38,7 @@ Here is a list of rules that help prevent problems during development.
 {\color{red} NOTE: These are just ideas right now}
 
 \begin{itemize}
-	\item Send a progress report to the client at least once a week
-	\item Meet with the client and coach once every 2 weeks to show a working demo
+	\item Meet with the client and coach every week to show a working demo
+	\item Add tests as soon as new methods are added to verify that they work
+	\item Have integration tests for common scenarios to reduce the need for user testing
 \end{itemize}
