Add setup for requirements analysis using MoSCoW

--- a/Reports/Plan van Aanpak/GameConcept.tex
+++ b/Reports/Plan van Aanpak/GameConcept.tex
@@ -1,7 +1,7 @@
 \section{Game concept}
 
-The goal of the game is to solve a puzzle by moving and rotating laser beams and 
-mirrors in such a way that a predefined target is hit. The game can be played by 
+The goal of the game is to solve a puzzle by controlling laser beams using mirrors
+in such a way that a predefined target is hit. The game can be played by 
 one or more local players and one or more remote players.
 
 There are cards present for the local players that represent mirror bases. These 
@@ -19,7 +19,32 @@ rotate them) it becomes possible to hit the target and as such solve the puzzle.
 The game provides various different types of mirrors with different properties, 
 allowing for more complex puzzles. One example of such a mirror is a colored mirror, 
 and then require the target is hit with the right (combination of) colors. Another 
-way to make puzzles more  complex is requiring that the players combine beams together
-to create more powerful beams.
+way to make puzzles more complex is requiring that the players combine beams together
+to create more powerful beams. Other optical components like beam splitters can
+also be introduced.
 
-{\color{red} TODO: MoSCoW}
+\subsection{Requirements}
+
+\textbf{Must haves}
+
+\begin{itemize}
+	\item TODO
+\end{itemize}
+
+\textbf{Should haves}
+
+\begin{itemize}
+	\item TODO
+\end{itemize}
+
+\textbf{Could haves}
+
+\begin{itemize}
+	\item TODO
+\end{itemize}
+
+\textbf{Won't haves}
+
+\begin{itemize}
+	\item TODO
+\end{itemize}
