--- a/Reports/Plan van Aanpak/Planning.tex
+++ b/Reports/Plan van Aanpak/Planning.tex
@@ -20,7 +20,8 @@ The project should be done by June the 26th, the Friday of week 4.10. This inclu
 	4.9 + 4.10 & June 26th & ??? \\ \hline
 \end{tabular}
 
-\section{Holidays + businessdays on which EWI is closed}
+\subsection{Holidays + businessdays on which EWI is closed}
+
 \begin{itemize}
 	\item Koningsdag 27-04-2015
 	\item Dodenherdenking 04-05-2015
