Added list of Must haves to GameConcept section.

--- a/Reports/Plan van Aanpak/GameConcept.tex
+++ b/Reports/Plan van Aanpak/GameConcept.tex
@@ -25,26 +25,29 @@ also be introduced.
 
 \subsection{Requirements}
 
-\textbf{Must haves}
+\paragraph{Must haves}
+\begin{itemize}
+	\item A light source and a target must be visible when the game starts.
+	\item A light source must emit a light beam in a predefined direction.
+	\item A light beam must reflect against a mirror when it hits one.
+	\item A local player must be able to see mirrors over the cards using AR technology.
+	\item A local player must be able to move the mirrors by moving the cards.
+	\item A remote player must be able to see the mirrors in the same positions and 
+		  orientations as the local players.
+	\item A remote player must be able to rotate the mirrors.
+\end{itemize}
 
+\paragraph{Should haves}
 \begin{itemize}
 	\item TODO
 \end{itemize}
 
-\textbf{Should haves}
-
+\paragraph{Could haves}
 \begin{itemize}
 	\item TODO
 \end{itemize}
 
-\textbf{Could haves}
-
-\begin{itemize}
-	\item TODO
-\end{itemize}
-
-\textbf{Won't haves}
-
+\paragraph{Won't haves}
 \begin{itemize}
 	\item TODO
 \end{itemize}
