Added list of Won't haves to GameConcept section.
This includes the requirement that both remote and local players are needed to be able to solve
the puzzles.

--- a/Reports/Plan van Aanpak/GameConcept.tex
+++ b/Reports/Plan van Aanpak/GameConcept.tex
@@ -49,5 +49,6 @@ also be introduced.
 
 \paragraph{Won't haves}
 \begin{itemize}
-	\item TODO
+	\item The game won't be playable with only remote players.
+	\item The game won't be playable with only local players.
 \end{itemize}
