Added list of Should haves to GameConcept section.
It only contains a single entry at this moment, but can be extended as required.

--- a/Reports/Plan van Aanpak/GameConcept.tex
+++ b/Reports/Plan van Aanpak/GameConcept.tex
@@ -27,24 +27,28 @@ also be introduced.
 
 \paragraph{Must haves}
 \begin{itemize}
-	\item A light source and a target must be visible when the game starts.
+	\item A light source, a target and zero or more blocks must be visible when the game starts.
 	\item A light source must emit a light beam in a predefined direction.
 	\item A light beam must reflect against a mirror when it hits one.
+	\item A light beam must stop when it hits a block
 	\item A local player must be able to see mirrors over the cards using AR technology.
 	\item A local player must be able to move the mirrors by moving the cards.
 	\item A remote player must be able to see the mirrors in the same positions and 
 		  orientations as the local players.
+	\item All players must be able to see the light beam, the light source, the target and the blocks.
 	\item A remote player must be able to rotate the mirrors.
 \end{itemize}
 
 \paragraph{Should haves}
 \begin{itemize}
-	\item TODO
+	\item There should be different types of mirror bases that allow for more complex
+		  and challenging puzzles.
+	\item \dots % TODO: Add more "Should have" entries
 \end{itemize}
 
 \paragraph{Could haves}
 \begin{itemize}
-	\item TODO
+	\item \dots % TODO: Add more "Could have" entries
 \end{itemize}
 
 \paragraph{Won't haves}
