--- a/Reports/Plan van Aanpak/Approach.tex
+++ b/Reports/Plan van Aanpak/Approach.tex
@@ -31,6 +31,14 @@ playable demo at the end of each weekly sprint. As soon as the game has all the
 basic ingredients to be fun to play, we'll find users to play test on a regular
 basis and collect feedback from them to improve the gameplay.
 
+The version control software used is Git. The project is on GitHub. Git uses a master branch (the 
+basic branch which contains the project), as well as multiple other, user-defined branches.
+The branch structure of Git allows a team to work in separate branches, to merge the branches 
+into the master branch later when that part of the project is done. This is done by making 
+a pull request, defining what was changed, and afterwards the branch can be merged with the master branch.
+The way branches work also allow other team members to do code reviews of a branch, as all changed/added
+code can be seen and commented on. This makes Git superior to SVN.
+
 \subsection{Guidelines}
 
 Here is a list of rules that help prevent problems during development.
