Removed duplicate (or near-duplicate) items from MoSCoW list.

--- a/Reports/Plan van Aanpak/GameConcept.tex
+++ b/Reports/Plan van Aanpak/GameConcept.tex
@@ -41,8 +41,6 @@ also be introduced.
 
 \paragraph{Should haves}
 \begin{itemize}
-	\item There should be different types of mirror bases that allow for more complex
-		  and challenging puzzles.
 	\item There should be elevations of mirrors, to allow light of a lower elevation to hit the target on a higher elevation, or the other way around
 	\item The light beams should be colored (after a certain level), and only light beams of a certain color can suffice in hitting the target.
 	\item There should be combiners (think AND- or OR-gates) that combine light and cause it to travel to the target.
@@ -53,7 +51,7 @@ also be introduced.
 \begin{itemize}
 	\item The game could have an infinite amount of levels.
 	\item The game could have random level generation according to maximum difficulty settings.
-	\item The game could have a helping AI that gives hints if the players are stuck (think of it as Clippy, but less annoying).
+	\item The game could give hints if the players are stuck.
 	% TODO verzin mogelijkerwijs nog meer could haves, won't haves, etc.
 \end{itemize}
 
@@ -62,5 +60,4 @@ also be introduced.
 	\item The game won't be playable with only remote players.
 	\item The game won't be playable with only local players.
 	\item The game won't be playable on Android or iOS devices.
-	\item The game cannot be played on just a flat surface, using hand tracking to place mirrors (it makes use of hand gestures to guess the mirror type).
 \end{itemize}
