Added guideline for C# coding convention.
We use the conventions as given on MSDN.

--- a/Reports/Plan van Aanpak/Plan van Aanpak.tex
+++ b/Reports/Plan van Aanpak/Plan van Aanpak.tex
@@ -4,6 +4,8 @@
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 
+\usepackage{hyperref}
+
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage[section] {placeins}
