--- a/Reports/Plan van Aanpak/Approach.tex
+++ b/Reports/Plan van Aanpak/Approach.tex
@@ -49,4 +49,6 @@ Here is a list of rules that help prevent problems during development.
 	\item Meet with the client and coach every week to show a working demo
 	\item Add tests as soon as new methods are added to verify that they work
 	\item Have integration tests for common scenarios to reduce the need for user testing
+	\item For C\# code, we adopt the guidelines posed by Microsoft
+		  (See \url{https://msdn.microsoft.com/en-us/library/ms229042.aspx})
 \end{itemize}
