Removed temporary notes from Product Planning.

--- a/Reports/Plan van Aanpak/Approach.tex
+++ b/Reports/Plan van Aanpak/Approach.tex
@@ -15,8 +15,6 @@ glasses.
 The Unity game engine is going to be used to render the in-game objects like
 mirrors and laser beams over the camera image.
 
-{\color{red} TODO: Find suitable AR library and write about it here}
-
 \subsection{Software engineering}
 
 Using the Unity game engine means that we'll use a loosely coupled
@@ -43,12 +41,10 @@ code can be seen and commented on. This makes Git superior to SVN.
 
 Here is a list of rules that help prevent problems during development.
 
-{\color{red} NOTE: These are just ideas right now}
-
 \begin{itemize}
 	\item Meet with the client and coach every week to show a working demo
 	\item Add tests as soon as new methods are added to verify that they work
 	\item Have integration tests for common scenarios to reduce the need for user testing
-	\item For C\# code, we adopt the guidelines posed by Microsoft
+	\item For C\# code, we adopt the guidelines presented by Microsoft
 		  (See \url{https://msdn.microsoft.com/en-us/library/ms229042.aspx})
 \end{itemize}
