--- a/Reports/Plan van Aanpak/GameConcept.tex
+++ b/Reports/Plan van Aanpak/GameConcept.tex
@@ -1,5 +1,8 @@
-\section{Game concept}
+\section{Concept}
+This section covers the concept idea of the gameplay, and the accompanying
+requirements.
 
+\subsection{Gameplay}
 The goal of the game is to solve a puzzle by controlling laser beams using mirrors
 in such a way that a predefined target is hit. The game can be played by 
 one or more local players and one or more remote players.
@@ -52,7 +55,6 @@ also be introduced.
 	\item The game could have an infinite amount of levels.
 	\item The game could have random level generation according to maximum difficulty settings.
 	\item The game could give hints if the players are stuck.
-	% TODO verzin mogelijkerwijs nog meer could haves, won't haves, etc.
 \end{itemize}
 
 \paragraph{Won't haves}
