--- a/Reports/Plan van Aanpak/Planning.tex
+++ b/Reports/Plan van Aanpak/Planning.tex
@@ -10,23 +10,23 @@ The project should be done by June the 26th, the Friday of week 4.10. This inclu
  
 \begin{tabular}{|l|c|r|}
 	\hline
-	Weeks & Deadline & Goal \\ \hline
-	4.1 + 4.2 & May 1st & Research report described above \\ \hline
-	4.3 & May 8th & AR integration + lasers \\ \hline
-	4.4 & May 15th & Basic gameplay start + start report \\ \hline
-	4.5 & May 22nd & Finalize first SIG version \\ \hline
-	4.6 & May 29th & Start advanced gameplay \\ \hline
-	4.7 + 4.8 & June 12th & ??? \\ \hline
+	Weeks      & Deadline  & Goal \\ \hline
+	4.1 + 4.2  & May 1st   & Research report described above \\ \hline
+	4.3        & May 8th   & AR integration + lasers \\ \hline
+	4.4        & May 15th  & Basic gameplay start + start report \\ \hline
+	4.5        & May 22nd  & Finalize first SIG version \\ \hline
+	4.6        & May 29th  & Start advanced gameplay \\ \hline
+	4.7 + 4.8  & June 12th & ??? \\ \hline
 	4.9 + 4.10 & June 26th & ??? \\ \hline
 \end{tabular}
 
 \subsection{Holidays + businessdays on which EWI is closed}
 
-\begin{itemize}
-	\item Koningsdag 27-04-2015
-	\item Dodenherdenking 04-05-2015
-	\item Bevrijdingsdag 05-05-2015
-	\item Hemelvaartsdag 14-05-2015
-	\item De dag na Hemelvaartsdag 15-05-2015
-	\item 2e Pinksterdag 25-05-2015
-\end{itemize}
+\begin{tabular}{ll}
+	Koningsdag               & 27-04-2015 \\
+	Dodenherdenking          & 04-05-2015 \\
+	Bevrijdingsdag           & 05-05-2015 \\
+	Hemelvaartsdag           & 14-05-2015 \\
+	De dag na Hemelvaartsdag & 15-05-2015 \\
+	2e Pinksterdag           & 25-05-2015
+\end{tabular}
