--- a/Reports/Plan van Aanpak/GameConcept.tex
+++ b/Reports/Plan van Aanpak/GameConcept.tex
@@ -1,5 +1,8 @@
-\section{Game concept}
+\section{Concept}
+This section covers the concept idea of the gameplay, and the accompanying
+requirements.
 
+\subsection{Gameplay}
 The goal of the game is to solve a puzzle by controlling laser beams using mirrors
 in such a way that a predefined target is hit. The game can be played by 
 one or more local players and one or more remote players.
@@ -27,37 +30,36 @@ also be introduced.
 
 \paragraph{Must haves}
 \begin{itemize}
-	\item A light source, a target and zero or more blocks must be visible when the game starts.
-	\item A light source must emit a light beam in a predefined direction.
-	\item A light beam must reflect against a mirror when it hits one.
-	\item A light beam must stop when it hits a block
-	\item A local player must be able to see mirrors over the cards using AR technology.
-	\item A local player must be able to move the mirrors by moving the cards.
-	\item A remote player must be able to see the mirrors in the same positions and 
+	\item Light source, a target and zero or more blocks must be visible when the game starts.
+	\item Light source must emit a light beam in a predefined direction.
+	\item Light beam must reflect against a mirror when it hits one.
+	\item Light beam must stop when it hits a block
+	\item Local player must be able to see mirrors over the cards using AR technology.
+	\item Local player must be able to move the mirrors by moving the cards.
+	\item Remote player must be able to see the mirrors in the same positions and 
 		  orientations as the local players.
 	\item All players must be able to see the light beam, the light source, the target and the blocks.
-	\item A remote player must be able to rotate the mirrors.
+	\item Remote players must be able to rotate the mirrors.
 \end{itemize}
 
 \paragraph{Should haves}
 \begin{itemize}
-	\item There should be elevations of mirrors, to allow light of a lower elevation to hit the target on a higher elevation, or the other way around
-	\item The light beams should be colored (after a certain level), and only light beams of a certain color can suffice in hitting the target.
-	\item There should be combiners (think AND- or OR-gates) that combine light and cause it to travel to the target.
-	\item There should be color combiners, to allow for a broader variety of color-specific targets.
+	\item Elevations of mirrors, to allow light of a lower elevation to hit the target on a higher elevation, or the other way around
+	\item Light beams should be colored (after a certain level), and only light beams of a certain color can suffice in hitting the target.
+	\item Combiners (think AND- or OR-gates) that combine light and cause it to travel to the target.
+	\item Color combiners, to allow for a broader variety of color-specific targets.
 \end{itemize}
 
 \paragraph{Could haves}
 \begin{itemize}
-	\item The game could have an infinite amount of levels.
-	\item The game could have random level generation according to maximum difficulty settings.
-	\item The game could give hints if the players are stuck.
-	% TODO verzin mogelijkerwijs nog meer could haves, won't haves, etc.
+	\item Infinite amount of levels.
+	\item Random level generation according to maximum difficulty settings.
+	\item Give hints if the players are stuck.
 \end{itemize}
 
 \paragraph{Won't haves}
 \begin{itemize}
-	\item The game won't be playable with only remote players.
-	\item The game won't be playable with only local players.
-	\item The game won't be playable on Android or iOS devices.
+	\item Playable with only remote players.
+	\item Playable with only local players.
+	\item Playable on Android or iOS devices.
 \end{itemize}
