Added individual chapters to Research Report.
The chapters reflect more or less the most important parts of the report. However, each subsection
will have to be extended to over two pages if we are to meet the expected report length. As such,
more chapters will have to be added to the report.

--- a/Reports/Research Report/ResearchReport.tex
+++ b/Reports/Research Report/ResearchReport.tex
@@ -1,4 +1,4 @@
-\documentclass[]{report}
+\documentclass{report}
 
 \usepackage[section] {placeins}
 \usepackage[verbose, a4paper, margin=0.5in] {geometry}
@@ -6,8 +6,6 @@
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{5pt plus 2pt minus 1pt}
 
-
-% Title Page
 \title{Research Report}
 \author{Thijs Boumans\\ Patrick Kramer\\ Alexander Overvoorde\\ Tim van Rossum}
 
@@ -18,5 +16,7 @@
 \dots
 \end{abstract}
 
+\input{Introduction.tex}
+\input{TechnologicalChallenges.tex}
 
 \end{document}          
