Divided Introduction in two subsections and added Conclusion.

--- a/Reports/Research Report/ResearchReport.tex
+++ b/Reports/Research Report/ResearchReport.tex
@@ -18,5 +18,6 @@
 
 \input{Introduction.tex}
 \input{TechnologicalChallenges.tex}
+\input{Conclusion.tex}
 
-\end{document}          
+\end{document}
