--- a/Reports/Research Report/Introduction.tex
+++ b/Reports/Research Report/Introduction.tex
@@ -1,5 +1,14 @@
 \section{Introduction} \label{sec:introduction}
 	% An introduction of what the project is about.
-	% Could partly be taken from the Product Plan 
-	% once it's been approved.
-	\dots
+
+	\subsection{Problem Formulation} \label{ssec:problem}
+		% A short but concise formulation of the problem,
+		% as given in BEPSys.
+	
+	\subsection{Proposed Solution} \label{ssec:solution}
+		% A description of the proposed solution, including 
+		% gameplay elements. This subsection should motivate 
+		% why the proposed solution is a good solution.
+		
+		% Could partly be taken from the Product Plan 
+		% once it has been approved.
