--- a/Reports/Research Report/TechnologicalChallenges.tex
+++ b/Reports/Research Report/TechnologicalChallenges.tex
@@ -1,6 +1,9 @@
-\section{Technological Challenges} \label{sec:technologicalchallenges}
+\section{Technical Challenges} \label{sec:technicalchallenges}
 	% Includes the challenges surrounding AR and Networking.
 	% Also motivates the choice for Unity, Vuforia, and the Oculus Rift.
+	This section provides an overview of the technical challenges of 
+	this project. For each named challenge, an overview and comparison is 
+	given of the possible solutions, with the chosen solution as conclusion.
 	
 	\subsection{Augmented Reality Hardware} \label{ssec:arhardware}
 	% Compares various AR hardware devices and motivates the 
