Fixed Research Report style to match 'report' document class.

--- a/Reports/Research Report/Conclusion.tex
+++ b/Reports/Research Report/Conclusion.tex
@@ -1,4 +1,4 @@
-\section{Conclusion} \label{sec:conclusion}
+\chapter{Conclusion} \label{ch:conclusion}
 	% Summarizes the Research Report and provides 
 	% an overview and conclusion of the technologies 
 	% we're going to use.
