--- a/Reports/Research Report/Introduction.tex
+++ b/Reports/Research Report/Introduction.tex
@@ -1,11 +1,11 @@
-\section{Introduction} \label{sec:introduction}
+\chapter{Introduction} \label{ch:introduction}
 	% An introduction of what the project is about.
 
-	\subsection{Problem Formulation} \label{ssec:problem}
+	\section{Problem Formulation} \label{sec:problem}
 		% A short but concise formulation of the problem,
 		% as given in BEPSys.
 	
-	\subsection{Proposed Solution} \label{ssec:solution}
+	\section{Proposed Solution} \label{sec:solution}
 		% A description of the proposed solution, including 
 		% gameplay elements. This subsection should motivate 
 		% why the proposed solution is a good solution.
