--- a/Reports/Research Report/TechnicalChallenges.tex
+++ b/Reports/Research Report/TechnicalChallenges.tex
@@ -1,19 +1,19 @@
-\section{Technical Challenges} \label{sec:technicalchallenges}
+\chapter{Technical Challenges} \label{ch:technicalchallenges}
 	% Includes the challenges surrounding AR and Networking.
 	% Also motivates the choice for Unity, Vuforia, and the Oculus Rift.
 	This section provides an overview of the technical challenges of 
 	this project. For each named challenge, an overview and comparison is 
 	given of the possible solutions, with the chosen solution as conclusion.
 	
-	\subsection{Augmented Reality Hardware} \label{ssec:arhardware}
+	\section{Augmented Reality Hardware} \label{sec:arhardware}
 	% Compares various AR hardware devices and motivates the 
 	% choice for choosing the Oculus Rift with two mounted cameras
 	
-	\subsection{Marker-based tracking library} \label{ssec:trackinglib}
+	\section{Marker-based tracking library} \label{sec:trackinglib}
 	% Compares different (AR) tracking libraries and motivates 
 	% the choice for choosing Quallcom's Vuforia library.
 	
-	\subsection{Programming Environment} \label{ssec:programmingenvironment}
+	\section{Programming Environment} \label{sec:programmingenvironment}
 	% Compares different environments and frameworks and motivates
 	% the choice for choosing Unity over other frameworks.
 	
