Polish planning document some

--- a/Reports/Product Plan/GameConcept.tex
+++ b/Reports/Product Plan/GameConcept.tex
@@ -14,10 +14,9 @@ Each of the local players will only be given a few of the mirror bases needed to
 the puzzle, and as such solving the puzzle requires cooperation from all local players.
 
 The remote players can also see the placed mirrors, and can rotate them to influence 
-the path of the laser beam(s). The remote players is also the only one who can see the
-obstacles that are predefined for that particular puzzle. Only by cooperation between 
-local players (who can only move the mirror bases) and remote players (who can only 
-rotate them) it becomes possible to hit the target and as such solve the puzzle.
+the path of the laser beam(s). Only by cooperation between local players (who can
+only move the mirror bases) and remote players (who can only rotate them) it becomes
+possible to hit the target and as such solve the puzzle.
 
 The game provides various different types of mirrors with different properties, 
 allowing for more complex puzzles. One example of such a mirror is a colored mirror, 
@@ -32,13 +31,13 @@ also be introduced.
 \begin{itemize}
 	\item Light source, a target and zero or more blocks must be visible when the game starts.
 	\item Light source must emit a light beam in a predefined direction.
-	\item Light beam must reflect against a mirror when it hits one.
-	\item Light beam must stop when it hits a block
-	\item Local player must be able to see mirrors over the cards using AR technology.
+	\item Laser beam must reflect against a mirror when it hits one.
+	\item Laser beam must stop when it hits a block
+	\item Local player must be able to see mirrors positioned on the cards using AR technology.
 	\item Local player must be able to move the mirrors by moving the cards.
 	\item Remote player must be able to see the mirrors in the same positions and 
 		  orientations as the local players.
-	\item All players must be able to see the light beam, the light source, the target and the blocks.
+	\item All players must be able to see the laser beam(s), the light source, the target and the blocks.
 	\item Remote players must be able to rotate the mirrors.
 \end{itemize}
 
