--- a/Reports/Product Plan/Planning.tex
+++ b/Reports/Product Plan/Planning.tex
@@ -2,11 +2,11 @@
 
 The first two weeks represent the research phase. In this phase we will find a suitable augmented reality (AR) library for Unity and prepare an Oculus Rift for AR use with cameras. We'll also design an architecture for the game that covers the marker detection, networking and gameplay mechanics. All of this information will be described in the research report handed in on May 1st. Main development commences after this phase and is organized in weekly sprints. The table below describes the goals per sprint, which will serve as a helpful reference to stay on schedule during development.
 
-The first SIG submission is due May the 26th. By then, we should already have a semi-functional product. The basic functionality (AR functionality, basic gameplay mechanics, etc.) should be in this version of our product. All the according graphics should also be done.
+The first SIG submission is due May 26th. By then, we should already have a semi-functional product. The basic functionality (AR functionality, basic gameplay mechanics, etc.) should be in this version of our product. All the relevant graphics assets should also be done.
 
-The second SIG submission is due June the 6th. By then, most of the functionality should be implemented (this includes advanced gameplay mechanics, hitting multiple targets, mirror elevations, etc). Also, all the bad parts of the code structure/architecture from the first version should be removed.
+The second SIG submission is due June 6th. By then, most of the functionality should be implemented (this includes advanced gameplay mechanics, hitting multiple targets, mirror elevations, etc). Also, all the bad parts of the code structure/architecture from the first version should be resolved.
 
-The project should be done by June the 26th, the Friday of week 4.10. This includes not only the project but also a final report of 40 to 50 pages. This means that the report should be worked on continuously.
+The project should be done by June 26th, the Friday of week 4.10. This includes not only the project but also a final report of 40 to 50 pages. This means that the report should be worked on continuously.
  
 \begin{tabular}{|l|c|r|}
 	\hline
