--- a/Reports/Research Report/Introduction.tex
+++ b/Reports/Research Report/Introduction.tex
@@ -1,9 +1,28 @@
 \chapter{Introduction} \label{ch:introduction}
 	% An introduction of what the project is about.
+	This chapter introduces the problem in section \ref{sec:problem}, as well as
+	the proposed solution in section \ref{sec:solution}. The proposed solution
+	also presents some potential technical challenges to overcome. Details about 
+	these challenges are discussed in chapter \ref{ch:technicalchallenges}.
 
 	\section{Problem Formulation} \label{sec:problem}
-		% A short but concise formulation of the problem,
-		% as given in BEPSys.
+		% The problem description is taken from BEPSys. It has been shortened 
+		% and slightly modified to fit the context of this document.
+		While augmented reality research has grown into a mature field over the 
+		last years, the aspects of situational awareness and presence of 
+		augmented reality (AR) are still quite open research topics. This 
+		project is about designing and implementing a collaborative game to 
+		explore the different perception of situational awareness, presence and 
+		workload in a physical and an AR environment. The game is to be employed 
+		as an approximation of collaboratively solving complex problems, as they 
+		occur in crime scene investigation when using virtual co-location, i.e. 
+		expert remote crime scene investigators to guide local investigators in 
+		AR to collaboratively analyse the crime scene.
+		
+		It has to be possible to play the game with at least three players: At 
+		least two players are present at the same location (physically 
+		co-located). At least one player is physically remote but virtually 
+		co-located. \cite{bepsys}
 	
 	\section{Proposed Solution} \label{sec:solution}
 		% A description of the proposed solution, including 
