--- a/Reports/Research Report/Introduction.tex
+++ b/Reports/Research Report/Introduction.tex
@@ -28,6 +28,29 @@
 		% A description of the proposed solution, including 
 		% gameplay elements. This subsection should motivate 
 		% why the proposed solution is a good solution.
+		The goal of the game is to solve a puzzle by controlling laser beams 
+		using mirrors in such a way that a predefined target is hit. The game 
+		can be played by one or more local players and one or more remote players.
 		
-		% Could partly be taken from the Product Plan 
-		% once it has been approved.
+		There are cards present for the local players that represent mirror 
+		bases. These must be placed on the table, which will be the locations 
+		for the mirrors. The local players will be able to see the mirrors they 
+		place through the use of AR technology. Each of the local players will 
+		only be given a few of the mirror bases needed to solve the puzzle, and 
+		as such solving the puzzle requires cooperation from all local players.
+		
+		The remote players can also see the placed mirrors, and can rotate them 
+		to influence the path of the laser beam(s). Only by cooperation between 
+		local players (who can only move the mirror bases) and remote players 
+		(who can only rotate them) it becomes possible to hit the target and as 
+		such solve the puzzle.
+		
+		The game provides various different types of mirrors with different 
+		properties, allowing for more complex puzzles. One example of such a 
+		mirror is a colored mirror, and then require the target is hit with the 
+		right (combination of) colors. Another way to make puzzles more complex 
+		is requiring that the players combine beams together to create more 
+		powerful beams. Other optical components like beam splitters can also be 
+		introduced.
+		
+		%TODO: Add paragraph on why this solution is a good one.
