Added options to Technical Challenges (as comments).
Also removed Programming Environment as the problem description already stated Unity was to be used.

--- a/Reports/Research Report/Introduction.tex
+++ b/Reports/Research Report/Introduction.tex
@@ -26,9 +26,9 @@
 		co-located \cite{bepsys}.
 	
 	\section{Proposed Solution} \label{sec:solution}
-		% A description of the proposed solution, including 
-		% gameplay elements. This subsection should motivate 
-		% why the proposed solution is a good solution.
+		% A description of the proposed solution, including gameplay elements. 
+		% The description is taken from the Product Plan. This section also 
+		% motivates why the proposed solution is a good solution.
 		The goal of the game is to solve a puzzle by controlling laser beams 
 		using mirrors in such a way that a predefined target is hit. The game 
 		can be played by one or more local players and one or more remote players.
