Added Bibliography chapter to Table of Contents.

--- a/Reports/Research Report/ResearchReport.tex
+++ b/Reports/Research Report/ResearchReport.tex
@@ -27,6 +27,8 @@
 \input{TechnicalChallenges.tex}
 \input{Conclusion.tex}
 
+\pagebreak % Required to fix page numbering in Table of Contents
 \bibliography{Bibliography}
+\addcontentsline{toc}{chapter}{Bibliography}
 
 \end{document}
