--- a/Reports/Research Report/TechnicalChallenges.tex
+++ b/Reports/Research Report/TechnicalChallenges.tex
@@ -9,30 +9,37 @@
 	% Compares various AR hardware devices.
 	
 	% Hardware devices to consider:
+		\subsection{META One} \label{ssec:metaone}
 	%   - META One (as indicated by the BEPSys project page)
 	%       - Has a limited Field-of-View (around 35 degrees)
 	%          - May interfere with the experience of the game.
 	%       - Optical see-through glasses means AR works out of the box.
+		\subsection{Oculus Rift} \label{ssec:oculusrift}
 	%   - Oculus Rift + mounted cameras (http://oculusvr.com/)
 	%       - High Field-of-View (100 degrees)
 	%       - VR glasses, so need to project the real world using cameras.
 	%          - Limited resolution creates blurriness.
 	%          - Projection can be done from within Unity
 	%          - Potentially requires a lot of calibration
+	
 	%   - ... <Add more as needed>
 	
 	\section{Marker-based tracking library} \label{sec:trackinglib}
 	% Compares different (AR) tracking libraries.
 	
 	% Libraries to consider:
+		\subsection{Vuforia} \label{ssec:vuforia}
 	%   - Vuforia (http://vuforia.com/ and http://developer.vuforia.com/)
 	%       - Includes integration with Unity
+		\subsection{Unity AR Toolkit (UART)} \label{ssec:uart}
 	%   - Unity AR Toolkit (UART) (https://research.cc.gatech.edu/uart/content/contents/)
 	%       - Source code and demos hosted on SourceForge (http://sourceforge.net/projects/uart/)
 	%       - Seems to be a research project
 	%       - Seems easy to use (comes with examples)
 	%       - Built for Unity
 	%       - Last change to SVN repo was in 2011.
+		\subsection{Metaio} \label{ssec:metaio}
 	%   - Metaio (http://www.metaio.com/)
 	%       - Mainly oriented towards mobile phones, so may not be suitable for this project
+	
 	%   - ... <Add more as needed>
