--- a/Reports/Research Report/Bibliography.bib
+++ b/Reports/Research Report/Bibliography.bib
@@ -3,10 +3,10 @@
 %   Assuming here that Stefan Lukosh is the author of the entry,
 %   otherwise we have no author to reference to (which, in 
 %   turn, will prevent sorting our bibliography and cause 
-%   problems with our APA-style references).
+%   problems with APA-style references).
 @misc{bepsys,
 title  = "Collaborative augmented reality tower game",
-author = "S.G. Lukosh",
+author = "S. G. Lukosh",
 year   = "2015",
 note   = "\url{http://bepsys.herokuapp.com/projects/view/82}, 
           Accessed 23-April-2015"
