Inserted a chapter 'Problem Analysis' in the Research Report.
This chapter provides detailed analysis of the potential difficulties to overcome during this project.
It is intended to link the 'Introduction' chapter to the 'Technical Difficulties' chapter.

--- a/Reports/Research Report/Conclusion.tex
+++ b/Reports/Research Report/Conclusion.tex
@@ -1,4 +1,4 @@
-\chapter{Conclusion} \label{ch:conclusion}
+\chapter{Conclusion} \label{cha:conclusion}
 	% Summarizes the Research Report and provides 
 	% an overview and conclusion of the technologies 
 	% we're going to use.
