--- a/Reports/Research Report/Introduction.tex
+++ b/Reports/Research Report/Introduction.tex
@@ -1,10 +1,11 @@
-\chapter{Introduction} \label{ch:introduction}
+\chapter{Introduction} \label{cha:introduction}
 	% An introduction of what the project is about.
 	This chapter introduces the problem in section \ref{sec:problem}, as well as
 	the proposed solution in section \ref{sec:solution}. The problem formulation
 	as well as the proposed solution present some potential technical challenges 
-	to overcome. Details about these challenges are discussed in chapter 
-	\ref{ch:technicalchallenges}.
+	to overcome. An analysis of these challeges is given in chapter 
+	\ref{cha:analysis}, while details about these challenges are discussed in 
+	chapter \ref{cha:technicalchallenges}.
 
 	\section{Problem Formulation} \label{sec:problem}
 		% The problem description is taken from BEPSys. It has been shortened 
