--- a/Reports/Research Report/ResearchReport.tex
+++ b/Reports/Research Report/ResearchReport.tex
@@ -24,6 +24,7 @@
 \tableofcontents
 
 \input{Introduction.tex}
+\input{ProblemAnalysis.tex}
 \input{TechnicalChallenges.tex}
 \input{Conclusion.tex}
 
