--- a/Reports/Research Report/TechnicalChallenges.tex
+++ b/Reports/Research Report/TechnicalChallenges.tex
@@ -1,9 +1,10 @@
-\chapter{Technical Challenges} \label{ch:technicalchallenges}
+\chapter{Technical Challenges} \label{cha:technicalchallenges}
 	% Includes the challenges surrounding AR and Networking.
 	% Also motivates the choices made.
-	This section provides an overview of the technical challenges of 
-	this project. For each named challenge, an overview and comparison is 
-	given of the possible solutions, with the chosen solution as conclusion.
+	This section provides a detailed analysis of the available solutions to the 
+	technical challenges mentioned in chapter \ref{cha:analysis}. It compares
+	these solutions and provides the solutions that are considered most 
+	appropriate to use for this project.
 	
 	\section{Augmented Reality Hardware} \label{sec:arhardware}
 	% Compares various AR hardware devices.
