--- a/Reports/Research Report/ResearchReport.tex
+++ b/Reports/Research Report/ResearchReport.tex
@@ -23,9 +23,9 @@
 
 \tableofcontents
 
-\input{Introduction.tex}
+\input{ProblemFormulation.tex}
 \input{ProblemAnalysis.tex}
-\input{TechnicalChallenges.tex}
+\input{ProposedSolution.tex}
 \input{Conclusion.tex}
 
 \pagebreak % Required to fix page numbering in Table of Contents
